force-app/main/default/objects/AccountContactRelation/fields/AV_Aplication__c.field-meta.xml
<CustomField>
    <fullName>AV_Aplication__c</fullName>
    <label>Aplication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV_MisClientes</fullName>
                <label>Mis Clientes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>