force-app/main/default/objects/AccountContactRelation/fields/AV_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalId__c</fullName>
    <description>External Id of Account Contact Relationship</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AV ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>