force-app/main/default/objects/AccountContactRelation/fields/CIBE_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>