force-app/main/default/objects/AccountContactRelation/fields/SEG_Cargos_en_la_empresa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Cargos_en_la_empresa__c</fullName>
    <description>Cargos asociados a Contactos (Cargos en la empresa)</description>
    <label>Cargos Contactos (Cargos en la empresa)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(cruz roja CASTRO URDIALES)</fullName>
                <isActive>false</isActive>
                <label>(cruz roja CASTRO URDIALES)</label>
            </value>
            <value>
                <fullName>ABOGADO/A SOCIEDAD</fullName>
            </value>
            <value>
                <fullName>ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>ADJUNT FINANCES</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION</fullName>
            </value>
            <value>
                <fullName>Administración</fullName>
                <isActive>false</isActive>
                <label>Administración</label>
            </value>
            <value>
                <fullName>ADMINISTRADOR</fullName>
                <isActive>false</isActive>
                <label>ADMINISTRADOR</label>
            </value>
            <value>
                <fullName>ADMINISTRADOR CONCURSAL</fullName>
            </value>
            <value>
                <fullName>ADMINISTRADOR UNICO</fullName>
            </value>
            <value>
                <fullName>Administrador único</fullName>
                <isActive>false</isActive>
                <label>Administrador único</label>
            </value>
            <value>
                <fullName>ADMINISTRATIVO/A</fullName>
            </value>
            <value>
                <fullName>ANALISTA DE PAGO</fullName>
            </value>
            <value>
                <fullName>ANALISTA ECONOMICO</fullName>
            </value>
            <value>
                <fullName>Analista económico</fullName>
                <isActive>false</isActive>
                <label>Analista económico</label>
            </value>
            <value>
                <fullName>APODERADO</fullName>
            </value>
            <value>
                <fullName>AUT TRANSFERENCIAS</fullName>
                <isActive>false</isActive>
                <label>AUT TRANSFERENCIAS</label>
            </value>
            <value>
                <fullName>BAJA EMPRESA</fullName>
            </value>
            <value>
                <fullName>BAJA TEMPORAL</fullName>
            </value>
            <value>
                <fullName>CONSEJERO/A DELEGADO/A</fullName>
            </value>
            <value>
                <fullName>CONTABILIDAD</fullName>
                <isActive>false</isActive>
                <label>CONTABILIDAD</label>
            </value>
            <value>
                <fullName>DEPARTAMENTO ADMINISTRACION</fullName>
            </value>
            <value>
                <fullName>Departamento administración</fullName>
                <isActive>false</isActive>
                <label>Departamento administración</label>
            </value>
            <value>
                <fullName>DEPARTAMENTO AUDITOR</fullName>
            </value>
            <value>
                <fullName>DEPARTAMENTO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>DEPARTAMENTO CONTABILIDAD</fullName>
            </value>
            <value>
                <fullName>Departamento de finanzas</fullName>
                <isActive>false</isActive>
                <label>Departamento de finanzas</label>
            </value>
            <value>
                <fullName>DEPARTAMENTO DE RRHH</fullName>
            </value>
            <value>
                <fullName>DEPARTAMENTO EXPANSION</fullName>
            </value>
            <value>
                <fullName>Departamento expansión</fullName>
                <isActive>false</isActive>
                <label>Departamento expansión</label>
            </value>
            <value>
                <fullName>DEPARTAMENTO FINANCIERO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>