force-app/main/default/objects/AccountContactRelation/fields/SEG_Cargos_Operativa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Cargos_Operativa__c</fullName>
    <description>Cargos asociados a Contactos (Operativa)</description>
    <label>Cargos contactos (Operativa)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AVALES</fullName>
            </value>
            <value>
                <fullName>AVALES CANCELACION</fullName>
            </value>
            <value>
                <fullName>Avales cancelación</fullName>
                <isActive>false</isActive>
                <label>Avales cancelación</label>
            </value>
            <value>
                <fullName>AVALES EMISION</fullName>
            </value>
            <value>
                <fullName>Avales emisión</fullName>
                <isActive>false</isActive>
                <label>Avales emisión</label>
            </value>
            <value>
                <fullName>AVALES INTERNACIONALES</fullName>
            </value>
            <value>
                <fullName>AVALES NACIONALES</fullName>
            </value>
            <value>
                <fullName>AVALES RECLAMACION CEAS</fullName>
            </value>
            <value>
                <fullName>Avales reclamación CEAS</fullName>
                <isActive>false</isActive>
                <label>Avales reclamación CEAS</label>
            </value>
            <value>
                <fullName>BASTANTEO</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>CALL BACK</fullName>
            </value>
            <value>
                <fullName>CEF</fullName>
            </value>
            <value>
                <fullName>CERTIFICADOS</fullName>
            </value>
            <value>
                <fullName>CHEQUES</fullName>
            </value>
            <value>
                <fullName>COBERTURAS</fullName>
            </value>
            <value>
                <fullName>COBROS Y PAGOS</fullName>
            </value>
            <value>
                <fullName>COMERCIOS</fullName>
            </value>
            <value>
                <fullName>COMEX</fullName>
            </value>
            <value>
                <fullName>COMEX-EXPORTACION</fullName>
            </value>
            <value>
                <fullName>COMEX-IMPORTACION</fullName>
            </value>
            <value>
                <fullName>COMEX-Importación</fullName>
                <isActive>false</isActive>
                <label>COMEX-Importación</label>
            </value>
            <value>
                <fullName>COMISIONES</fullName>
            </value>
            <value>
                <fullName>COMPRA CHEQUE EXTRANJERO</fullName>
            </value>
            <value>
                <fullName>COMPRA DIVISA</fullName>
            </value>
            <value>
                <fullName>CONFIRMING</fullName>
            </value>
            <value>
                <fullName>CONTRATOS</fullName>
            </value>
            <value>
                <fullName>CUENTAS</fullName>
            </value>
            <value>
                <fullName>DERIVADOS</fullName>
            </value>
            <value>
                <fullName>Devolución transferencias</fullName>
                <isActive>false</isActive>
                <label>Devolución transferencias</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>