force-app/main/default/objects/AccountContactRelation/fields/SEG_Creditos_sindicados__c.field-meta.xml
<CustomField>
    <fullName>SEG_Creditos_sindicados__c</fullName>
    <description>Cargos asociados a Créditos sindicados</description>
    <label>Cargos (Créditos sindicados)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASESOR CONTRATO</fullName>
            </value>
            <value>
                <fullName>ASESOR FICHA</fullName>
            </value>
            <value>
                <fullName>ASESOR JURIDICO</fullName>
            </value>
            <value>
                <fullName>Asesor jurídico</fullName>
                <isActive>false</isActive>
                <label>Asesor jurídico</label>
            </value>
            <value>
                <fullName>ASESOR TECNICO</fullName>
            </value>
            <value>
                <fullName>Asesor técnico</fullName>
                <isActive>false</isActive>
                <label>Asesor técnico</label>
            </value>
            <value>
                <fullName>GARANTE</fullName>
            </value>
            <value>
                <fullName>GESTOR WAIVER</fullName>
            </value>
            <value>
                <fullName>ORIGINADOR</fullName>
            </value>
            <value>
                <fullName>OSN</fullName>
            </value>
            <value>
                <fullName>SOE</fullName>
            </value>
            <value>
                <fullName>USO EN ADMINISTRACION</fullName>
                <isActive>false</isActive>
                <label>USO EN ADMINISTRACION</label>
            </value>
            <value>
                <fullName>Uso en administración</fullName>
                <isActive>false</isActive>
                <label>Uso en administración</label>
            </value>
            <value>
                <fullName>USO EN SEGUIMIENTO</fullName>
                <isActive>false</isActive>
                <label>USO EN SEGUIMIENTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>