force-app/main/default/objects/AccountContactRelation/fields/SEG_Reportar_temas_nuevos__c.field-meta.xml
<CustomField>
    <fullName>SEG_Reportar_temas_nuevos__c</fullName>
    <description>Cargos asociados a Contactos (Reportar temas nuevos)</description>
    <label>Cargos Contactos (Reportar temas nuevos)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVO</fullName>
            </value>
            <value>
                <fullName>AVALES</fullName>
            </value>
            <value>
                <fullName>Avisar comunicaciones</fullName>
                <isActive>false</isActive>
                <label>Avisar comunicaciones</label>
            </value>
            <value>
                <fullName>AVISAR SIEMPRE</fullName>
            </value>
            <value>
                <fullName>Aviso agosto aviso vacaciones (otro contacto)</fullName>
                <isActive>false</isActive>
                <label>Aviso agosto aviso vacaciones (otro contacto)</label>
            </value>
            <value>
                <fullName>Aviso CDE</fullName>
                <isActive>false</isActive>
                <label>Aviso CDE</label>
            </value>
            <value>
                <fullName>Aviso CDI</fullName>
                <isActive>false</isActive>
                <label>Aviso CDI</label>
            </value>
            <value>
                <fullName>Aviso COMEX</fullName>
                <isActive>false</isActive>
                <label>Aviso COMEX</label>
            </value>
            <value>
                <fullName>Aviso financiación</fullName>
                <isActive>false</isActive>
                <label>Aviso financiación</label>
            </value>
            <value>
                <fullName>Aviso RMD</fullName>
                <isActive>false</isActive>
                <label>Aviso RMD</label>
            </value>
            <value>
                <fullName>Aviso RME</fullName>
                <isActive>false</isActive>
                <label>Aviso RME</label>
            </value>
            <value>
                <fullName>Aviso RMI</fullName>
                <isActive>false</isActive>
                <label>Aviso RMI</label>
            </value>
            <value>
                <fullName>Aviso seguro de cambio</fullName>
                <isActive>false</isActive>
                <label>Aviso seguro de cambio</label>
            </value>
            <value>
                <fullName>Aviso tarjeta</fullName>
                <isActive>false</isActive>
                <label>Aviso tarjeta</label>
            </value>
            <value>
                <fullName>Aviso TDI recibida</fullName>
                <isActive>false</isActive>
                <label>Aviso TDI recibida</label>
            </value>
            <value>
                <fullName>AVISO VACACIONES</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>BASTANTEO</fullName>
            </value>
            <value>
                <fullName>BLANQUEO</fullName>
            </value>
            <value>
                <fullName>CALL BACK</fullName>
            </value>
            <value>
                <fullName>Call back (confirmar ordenes de pago)</fullName>
                <isActive>false</isActive>
                <label>Call back (confirmar ordenes de pago)</label>
            </value>
            <value>
                <fullName>CARGOS</fullName>
            </value>
            <value>
                <fullName>CARNETS FC BARCELONA</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>COBROS</fullName>
            </value>
            <value>
                <fullName>COMEX</fullName>
            </value>
            <value>
                <fullName>COMUNICACIONES</fullName>
            </value>
            <value>
                <fullName>CONTRATOS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>